# qr-gen-cpp

./: .gitmodules  CMakeLists.txt  README.md  qr-icon.rc
header/: main.hpp
source/: main.cpp  qr.cpp
